// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Select can be disabled 1`] = `
<div
  aria-disabled={true}
  aria-hidden={true}
  className="mdc-select"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="listbox"
  style={Object {}}
>
  <div
    className="mdc-select__surface"
    tabIndex="-1"
  >
    <div
      className="mdc-select__label"
    />
    <div
      className="mdc-select__selected-text"
    />
    <div
      className="mdc-select__bottom-line"
    />
  </div>
  <div
    className="mdc-select__menu mdc-menu"
    tabIndex="-1"
  >
    <ul
      aria-hidden="true"
      className="mdc-menu__items mdc-list"
      role="menu"
    >
      <li
        className="mdc-list-item"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="option"
        tabIndex="0"
      >
        Children is Here!
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/Select can be styled 1`] = `
<div
  aria-hidden={true}
  className="mdc-select"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="listbox"
  style={
    Object {
      "color": "red",
    }
  }
>
  <div
    className="mdc-select__surface"
    tabIndex="0"
  >
    <div
      className="mdc-select__label"
    />
    <div
      className="mdc-select__selected-text"
    />
    <div
      className="mdc-select__bottom-line"
    />
  </div>
  <div
    className="mdc-select__menu mdc-menu"
    tabIndex="-1"
  >
    <ul
      aria-hidden="true"
      className="mdc-menu__items mdc-list"
      role="menu"
    >
      <li
        className="mdc-list-item"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="option"
        tabIndex="0"
      >
        Children is Here!
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/Select can have a label 1`] = `
<div
  aria-hidden={true}
  className="mdc-select"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="listbox"
  style={Object {}}
>
  <div
    className="mdc-select__surface"
    tabIndex="0"
  >
    <div
      className="mdc-select__label"
    >
      foo
    </div>
    <div
      className="mdc-select__selected-text"
    />
    <div
      className="mdc-select__bottom-line"
    />
  </div>
  <div
    className="mdc-select__menu mdc-menu"
    tabIndex="-1"
  >
    <ul
      aria-hidden="true"
      className="mdc-menu__items mdc-list"
      role="menu"
    >
      <li
        className="mdc-list-item"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="option"
        tabIndex="0"
      >
        Children is Here!
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/Select can have a selected index 1`] = `
<div
  aria-hidden={true}
  className="mdc-select"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="listbox"
  style={Object {}}
>
  <div
    className="mdc-select__surface"
    tabIndex="0"
  >
    <div
      className="mdc-select__label"
    />
    <div
      className="mdc-select__selected-text"
    />
    <div
      className="mdc-select__bottom-line"
    />
  </div>
  <div
    className="mdc-select__menu mdc-menu"
    tabIndex="-1"
  >
    <ul
      aria-hidden="true"
      className="mdc-menu__items mdc-list"
      role="menu"
    >
      <li
        className="mdc-list-item"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="option"
        tabIndex="0"
      >
        Children is Here!
      </li>
    </ul>
  </div>
</div>
`;
